# elgenerics

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md
.github/workflows/: haskell.yml
ci/configs/: ghc-9.2.8.project  ghc-9.4.8.project  ghc-9.6.6.project  ghc-9.8.2.project
elgenerics-containers/: ChangeLog.md  LICENSE  README.md  elgenerics-containers.cabal
elgenerics-containers/app/: record-test.hs  record-tylist-test.hs
elgenerics-containers/src/Data/: HList.hs  Record.hs  Union.hs
elgenerics-containers/src/Data/HList/: HigherKinded.hs  Internal.hs
elgenerics-containers/src/Data/HList/HigherKinded/: Builder.hs
elgenerics-containers/src/Data/Product/: Class.hs
elgenerics-containers/src/Data/Record/: HigherKinded.hs  Plugin.hs
elgenerics-containers/src/Data/Record/Builder/: HigherKinded.hs
elgenerics-containers/src/Data/Record/Builder/HigherKinded/: BottomUp.hs
elgenerics-containers/src/Data/Record/HigherKinded/: Internal.hs  OnEntry.hs  Unsafe.hs
elgenerics-containers/src/Data/Sum/: Class.hs
elgenerics-containers/src/Data/TypeLevel/: BinTree.hs  Path.hs
elgenerics-containers/src/Data/Union/: HigherKinded.hs  Internal.hs
elgenerics-containers/test/Data/: RecordSpec.hs
elgenerics-containers/test/Data/Record/: Cases.hs  Failures.hs  HigherKindedSpec.hs  PluginSpec.hs
elgenerics-containers/test/Data/Record/Builder/: HigherKindedSpec.hs
elgenerics-containers/test/Data/Record/Builder/HigherKinded/: BottomUpSpec.hs
elgenerics-known/: ChangeLog.md  README.md  elgenerics-known.cabal
elgenerics-known/app/: NormDefs.hs  normalise-test.hs  simple-plugin-test.hs
elgenerics-known/src/Control/Category/: Monoid.hs
elgenerics-known/src/Data/: Inhabited.hs  Membership.hs
elgenerics-known/src/Data/Constraint/: Operators.hs  TH.hs
elgenerics-known/src/Data/Constraint/Deferrable/: Solver.hs
elgenerics-known/src/Data/TypeLevel/: Applicative.hs  Bool.hs  Eq.hs  Foldable.hs  Function.hs  Known.hs  List.hs  Maybe.hs  Monoid.hs  Nat.hs  Ord.hs  OrdMap.hs  Tuple.hs  Typeable.hs
elgenerics-known/src/Data/TypeLevel/Known/: Core.hs  TH.hs
elgenerics-known/src/Data/TypeLevel/List/: Core.hs  Overloaded.hs  Properties.hs  Solver.hs  Unsafe.hs
elgenerics-known/src/Data/TypeLevel/List/Solver/: Constraint.hs  Free.hs  Generation.hs  Reduce.hs  Syntax.hs  Utils.hs
elgenerics-known/src/Data/TypeLevel/Normalise/: Plugin.hs
elgenerics-known/src/Data/TypeLevel/Ord/: Internal.hs
elgenerics-known/src/Data/TypeLevel/OrdMap/: Internal.hs
elgenerics-known/src/Data/UnionFind/: Primitive.hs
elgenerics-known/src/GHC/TcPluginM/: Orphans.hs
elgenerics-known/test/: Helpers.hs
elgenerics-known/test/Data/Constraint/Deferrable/: SolverSpec.hs
elgenerics-known/test/Data/Constraint/Deferrable/SolverSpec/: Cases.hs  Undeferreds.hs
elgenerics-known/test/Data/TypeLevel/: KnownSpec.hs  ListSpec.hs  NatSpec.hs  OrdMapSpec.hs
elgenerics-known/test/Data/TypeLevel/ListSpec/: Cases.hs  Undeferred.hs
elgenerics-known/test/Data/TypeLevel/Nat/: Definitions.hs
elgenerics-known/test/Data/TypeLevel/OrdMapSpec/: Cases.hs  Failures.hs
